fix(old-ui/mobile): ensure logo visibility in GPT's chat bubbles for mobiles in old-ui
- Address an issue in the old UI where the GPT logo was not visible within the chat bubble.

Changes summary:
- Resolved a problem specific to the old UI where the GPT logo within the chat bubble was not appearing as intended, impacting the conversation flow. This change ensures that the GPT logo is consistently visible in chat bubbles, enhancing the user experience.

--- a/src/sass/layouts/old-ui/_chat-bubbles.scss
+++ b/src/sass/layouts/old-ui/_chat-bubbles.scss
@@ -87,6 +87,15 @@ main:has(button[aria-label='Stop generating']) {
 			}
 		}
 
+		&:has([data-message-author-role='assistant']) {
+			/* GPT avatar in its chat bubbles */
+			@include dev(mob) {
+				.gizmo-bot-avatar:has(svg[role='img']) {
+					visibility: visible !important;
+				}
+			}
+		}
+
 		/* User chat bubble - Edit state. There is no [data-message-author-role="user"] when we clicked on "Edit Prompt", so we need select like this for that case scenario */
 		[class^='group/conversation-turn']:has(textarea) {
 			/* === User/ChatGPT name === */
